add: project cash register

--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,15 @@
                 <ol reversed class="project-list">
                     <div class="list-item-container">
                         <h2 class="project-name">
+                            <li class="list-item"><span style="color: var(--dark-gray);">Cash Register Manager</span></li>
+                        </h2>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 21, 2021</small>
+                        <p class="project-gist">Web App created using JavaScript that allows users to find the number of notes to return to a customer, given the bill and cash amount.</p>
+                        <a target="_blank" href="https://cash-register-bharati.netlify.app/" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://github.com/bharati-21/cash-register" class="link link-secondary">View Source</a>
+                    </div>
+                    <div class="list-item-container">
+                        <h2 class="project-name">
                             <li class="list-item"><span style="color: var(--dark-gray);">Book Recommender</span></li>
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 06, 2021</small>
