add: project lucky birthday

--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,15 @@
                 <ol reversed class="project-list">
                     <div class="list-item-container">
                         <h2 class="project-name">
+                            <li class="list-item"><span style="color: var(--dark-gray);">Is Your Birthday Lucky?</span></li>
+                        </h2>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 29, 2021</small>
+                        <p class="project-gist">An application created using JavaScript that takes the birthday and lucky number of the user to tell if their birth date is lucky or not!</p>
+                        <a target="_blank" href="https://bharati-is-your-birthday-lucky.netlify.app/" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://github.com/bharati-21/is-your-birthday-lucky" class="link link-secondary">View Source</a>
+                    </div>
+                    <div class="list-item-container">
+                        <h2 class="project-name">
                             <li class="list-item"><span style="color: var(--dark-gray);">Cash Register Manager</span></li>
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 21, 2021</small>
