fix: update project link
Update project link for book recommender

--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 06, 2021</small>
                         <p class="project-gist">Web App created using ReactJS that allows user click genres to view Books read and recommended by <em>Bharati Subramanian</em>.</p>
-                        <a target="_blank" href="https://tzb59.csb.app/" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://bharati-book-recommender.netlify.app/" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/book-recommender/tree/main/" class="link link-secondary">View Source</a>
                     </div>
                     <div class="list-item-container">
