add: projects and fix links

--- a/projects.html
+++ b/projects.html
@@ -29,8 +29,36 @@
         </header>
         <main class="main projects-main">
             <h1 class="main-head secondary-color">MY WORK AND PROJECTS</h1>
+            
             <section class="my-projects section container-center">
                 <ol reversed class="project-list">
+                    <div class="list-item-container">
+                        <h2 class="project-name">
+                            <li class="list-item"><span style="color: var(--dark-gray);">Stock: Profit or Loss?</span></li>
+                        </h2>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>August 6, 2021</small>
+                        <p class="project-gist">Application created using JavaScript that compares the price of stock bought by the user with the current stock price to check if the user gained profit or loss.</p>
+                        <a target="_blank" href="https://bharati-stock-profit-loss.netlify.app/" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://github.com/bharati-21/stock-profit-loss" class="link link-secondary">View Source</a>
+                    </div>
+                    <div class="list-item-container">
+                        <h2 class="project-name">
+                            <li class="list-item"><span style="color: var(--dark-gray);">Is Your Birth Date A Palindrome?</span></li>
+                        </h2>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>August 4, 2021</small>
+                        <p class="project-gist">Aa application created using JavaScript that checks if the user's birth date is a palindrome. If not, the application displays the nearest palindrome to the birth date.</p>
+                        <a target="_blank" href="https://bharati-birthday-palindrome.netlify.app/" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://github.com/bharati-21/birthday-palindrome" class="link link-secondary">View Source</a>
+                    </div>
+                    <div class="list-item-container">
+                        <h2 class="project-name">
+                            <li class="list-item"><span style="color: var(--dark-gray);">Play With Triangles</span></li>
+                        </h2>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>August 1, 2021</small>
+                        <p class="project-gist">A fun application created using ReactJs that tests your knowledge of triangles and it's types!</p>
+                        <a target="_blank" href="https://bharati-play-with-triangles.netlify.app/" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://github.com/bharati-21/play-with-triangles" class="link link-secondary">View Source</a>
+                    </div>
                     <div class="list-item-container">
                         <h2 class="project-name">
                             <li class="list-item"><span style="color: var(--dark-gray);">Is Your Birthday Lucky?</span></li>
@@ -56,7 +84,7 @@
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 06, 2021</small>
                         <p class="project-gist">Web App created using ReactJS that allows user click genres to view Books read and recommended by <em>Bharati Subramanian</em>.</p>
                         <a target="_blank" href="https://bharati-book-recommender.netlify.app/" class="link link-primary">Live Demo</a>
-                        <a target="_blank" href="https://github.com/bharati-21/book-recommender/tree/main/" class="link link-secondary">View Source</a>
+                        <a target="_blank" href="https://github.com/bharati-21/book-recommender" class="link link-secondary">View Source</a>
                     </div>
                     <div class="list-item-container">
                         <h2 class="project-name">
@@ -64,7 +92,7 @@
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 06, 2021</small>
                         <p class="project-gist">This is a small web app using ReactJS that interprets the emojis entered and clicked by the user.</p>
-                        <a target="_blank" href="https://ich7q.csb.app/" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://bharati-emoji-interpreter.netlify.app/" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/emoji-interpreter" class="link link-secondary">View Source</a>
                     </div>
                     <div class="list-item-container">
