fix: blog six title

--- a/blog-six.html
+++ b/blog-six.html
@@ -28,7 +28,7 @@
         </header>
 
         <main class="main blogs-main blog-content-preview">
-            <h1 class="blog-title secondary-color">Demystifying Position Property</h1>
+            <h1 class="blog-title secondary-color">JavaScript loading techniques & Performance</h1>
 
             <section class="my-blogs section container-center blog-content">
                 <article class="blog-intro">
