fix: link to blog

--- a/blogs.html
+++ b/blogs.html
@@ -37,7 +37,7 @@
                         </h2>
                         <small class="blog-date">July 18, 2021</small>
                         <p class="blog-gist">This blog explains <strong>JavaScript Loading Techniques</strong> and compares their performances.</p>
-                        <a target="_blank" href="./blog-six.html" class="link link-primary">
+                        <a target="_blank" href="./blog-seven.html" class="link link-primary">
                             Read More
                         </a>
                     </div>
