--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                 <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>I also write technical blog posts to document my learning and deepen my understanding.
                 </h3>
                 <div class="links-container">
-                    <a href="https://dev.to/bharati21" class="link link-primary">Check out my Blogs</a>
+                    <a href="./blogs.html" class="link link-primary">Check out my Blogs</a>
+                    <a target="_blank" href="https://dev.to/dashboard" class="link link-secondary secondary-color">Browse blogs on Dev</a>
+                    
                 </div>
             </section>
             <section class="bg-white about section container container-center">
@@ -121,7 +123,7 @@
         </main>
         <footer class="footer container bg-dark-gray">
             <div class="footer-head">Thank you for visiting my space!</div>
-            <p>Follow me on social networking sites for more technical content!</p>
+            <p>Follow me on social networking sites!</p>
             <ul class="social-links inline-list">
                 <li>
                     <a href="https://github.com/bharati-21" class="link">
@@ -156,22 +158,22 @@
                         Twitter
                     </a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="https://www.instagram.com/bharati_codes/" class="link">
                         <span class="fa-icon">
                             <i class="fab fa-instagram"></i>
                         </span>
                         Instagram
                     </a>
-                </li>
-                <li class="inline-list">
+                </li> -->
+                <!-- <li class="inline-list">
                     <a href="" class="link">
                         <span class="fa-icon">
                             <i class="fab fa-goodreads"></i>
                         </span>
                         Goodreads
                     </a>
-                </li>
+                </li> -->
             </ul>
 
         </footer>
