update: footer linksr
removed GR and instagram link from footer in blogs.html

--- a/blogs.html
+++ b/blogs.html
@@ -152,22 +152,22 @@
                         Twitter
                     </a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="https://www.instagram.com/bharati_codes/" class="link">
                         <span class="fa-icon">
                             <i class="fab fa-instagram"></i>
                         </span>
                         Instagram
                     </a>
-                </li>
-                <li class="inline-list">
+                </li> -->
+                <!-- <li class="inline-list">
                     <a href="" class="link">
                         <span class="fa-icon">
                             <i class="fab fa-goodreads"></i>
                         </span>
                         Goodreads
                     </a>
-                </li>
+                </li> -->
             </ul>
 
         </footer>
